feature: Working on a cleaner Spider. (#11)